--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-
-bb
-b
-Hello World !!!
-kkkkkk
+`stock_name`, `current_price`, `trading_volume`, `previous_day_price`, `fluctuation_rate`, "
+                      "`face_value`, `opening_price`, `highest_price`, `lowest_price`, `bid_price`, `ask_price`, "
+                      "`bid_total_volume`, `ask_total_volume`, `trading_value`, `previous_day_trading_volume`, "
+                      "`foreigner_ratio`, `listed_shares`, `market_capitalization`, `total_assets`, `total_liabilities`, "
+                      "`sales`, `sales_growth_rate`, `operating_profit`, `operating_profit_growth_rate`, `net_income`, "
+                      "`net_income_per_share`, `dividend_per_share`, `PER`, `ROE`, `ROA`, `PBR`, `reserve_ratio`)"
