--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
-<html>
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9292743843031269"
-     crossorigin="anonymous"></script>
-
+    <meta charset="UTF-8">
+    <title>기술 소개 페이지</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        header, nav, section, aside, footer { margin: 10px; padding: 10px; border: 1px solid #ddd; }
+        nav ul { list-style-type: none; }
+        nav ul li { padding: 5px; }
+        section { float: left; width: 70%; }
+        aside { float: right; width: 20%; }
+        footer { clear: both; }
+    </style>
 </head>
-
 <body>
-Welcome to the Holaworld !!!
+    <header>
+        <h1>기술 소개</h1>
+    </header>
+    <nav>
+        <ul>
+            <li>홈</li>
+            <li>기술 뉴스</li>
+            <li>연락처</li>
+        </ul>
+    </nav>
+    <section>
+        <article>
+            <h2>주요 기술</h2>
+            <p>여기에 기술에 대한 설명을 추가하세요.</p>
+        </article>
+    </section>
+    <aside>
+        <h3>관련 링크</h3>
+        <ul>
+            <li><a href="#">링크 #1</a></li>
+            <li><a href="#">링크 #2</a></li>
+        </ul>
+    </aside>
+    <footer>
+        <p>© 2024 기술 소개 페이지</p>
+    </footer>
 </body>
 </html>
