--- a/index.html
+++ b/index.html
@@ -2,43 +2,39 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>기술 소개 페이지</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>모바일 최적화 웹페이지</title>
     <style>
-        body { font-family: Arial, sans-serif; }
-        header, nav, section, aside, footer { margin: 10px; padding: 10px; border: 1px solid #ddd; }
-        nav ul { list-style-type: none; }
-        nav ul li { padding: 5px; }
-        section { float: left; width: 70%; }
-        aside { float: right; width: 20%; }
-        footer { clear: both; }
+        body { font-family: 'Arial', sans-serif; margin: 0; padding: 0; }
+        .container { padding: 20px; }
+        header, .content, footer { margin: 2% 5%; }
+        nav ul { list-style-type: none; padding: 0; }
+        nav ul li { padding: 8px; background-color: #ddd; margin-bottom: 5px; }
+        @media (min-width: 600px) {
+            .container { padding: 40px; }
+            nav ul li { display: inline; margin-right: 10px; background-color: transparent; }
+        }
     </style>
 </head>
 <body>
-    <header>
-        <h1>기술 소개</h1>
-    </header>
-    <nav>
-        <ul>
-            <li>홈</li>
-            <li>기술 뉴스</li>
-            <li>연락처</li>
-        </ul>
-    </nav>
-    <section>
-        <article>
+    <div class="container">
+        <header>
+            <h1>기술 소개</h1>
+        </header>
+        <nav>
+            <ul>
+                <li>홈</li>
+                <li>기술 뉴스</li>
+                <li>연락처</li>
+            </ul>
+        </nav>
+        <div class="content">
             <h2>주요 기술</h2>
             <p>여기에 기술에 대한 설명을 추가하세요.</p>
-        </article>
-    </section>
-    <aside>
-        <h3>관련 링크</h3>
-        <ul>
-            <li><a href="#">링크 #1</a></li>
-            <li><a href="#">링크 #2</a></li>
-        </ul>
-    </aside>
-    <footer>
-        <p>© 2024 기술 소개 페이지</p>
-    </footer>
+        </div>
+        <footer>
+            <p>© 2024 기술 소개 페이지</p>
+        </footer>
+    </div>
 </body>
 </html>
