--- a/index.html
+++ b/index.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>모바일 최적화 웹페이지</title>
-    <style>
-        body { font-family: 'Arial', sans-serif; margin: 0; padding: 0; }
-        .container { padding: 20px; }
-        header, .content, footer { margin: 2% 5%; }
-        nav ul { list-style-type: none; padding: 0; }
-        nav ul li { padding: 8px; background-color: #ddd; margin-bottom: 5px; }
-        @media (min-width: 600px) {
-            .container { padding: 40px; }
-            nav ul li { display: inline; margin-right: 10px; background-color: transparent; }
-        }
-    </style>
+    <title>Responsive Webpage Sample</title>
+    <!-- Include Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>기술 소개</h1>
-        </header>
-        <nav>
-            <ul>
-                <li>홈</li>
-                <li>기술 뉴스</li>
-                <li>연락처</li>
-            </ul>
-        </nav>
-        <div class="content">
-            <h2>주요 기술</h2>
-            <p>여기에 기술에 대한 설명을 추가하세요.</p>
+        <h1 class="mt-5">Welcome to My Responsive Webpage</h1>
+        <p>This is a sample webpage created using Bootstrap 5.</p>
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Left Column</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nunc nec tincidunt tincidunt, libero libero tincidunt justo, vel tincidunt justo elit vel justo.</p>
+            </div>
+            <div class="col-md-6">
+                <h2>Right Column</h2>
+                <p>Nullam euismod, nunc nec tincidunt tincidunt, libero libero tincidunt justo, vel tincidunt justo elit vel justo. Sed euismod, nunc nec tincidunt tincidunt.</p>
+            </div>
         </div>
-        <footer>
-            <p>© 2024 기술 소개 페이지</p>
-        </footer>
+        <div class="row">
+            <div class="col-md-12">
+                <h2>Full-Width Section</h2>
+                <p>Donec euismod, nunc nec tincidunt tincidunt, libero libero tincidunt justo, vel tincidunt justo elit vel justo. Sed euismod, nunc nec tincidunt tincidunt.</p>
+            </div>
+        </div>
     </div>
+
+    <!-- Include Bootstrap JS (optional) -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
 </body>
 </html>
