index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -1,35 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Webpage Sample</title>
-    <!-- Include Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
-</head>
-<body>
-    <div class="container">
-        <h1 class="mt-5">Welcome to My Responsive Webpage</h1>
-        <p>This is a sample webpage created using Bootstrap 5.</p>
-        <div class="row">
-            <div class="col-md-6">
-                <h2>Left Column</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nunc nec tincidunt tincidunt, libero libero tincidunt justo, vel tincidunt justo elit vel justo.</p>
-            </div>
-            <div class="col-md-6">
-                <h2>Right Column</h2>
-                <p>Nullam euismod, nunc nec tincidunt tincidunt, libero libero tincidunt justo, vel tincidunt justo elit vel justo. Sed euismod, nunc nec tincidunt tincidunt.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Full-Width Section</h2>
-                <p>Donec euismod, nunc nec tincidunt tincidunt, libero libero tincidunt justo, vel tincidunt justo elit vel justo. Sed euismod, nunc nec tincidunt tincidunt.</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Include Bootstrap JS (optional) -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-</body>
-</html>
+|Tools|설치용량|
+|:---:|---:|
