--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </ul>
 
         <h2>링크</h2>
-        <p><a href="https://www.example.com">이곳</a>을 클릭하여 example.com으로 이동하세요.</p>        
+        <p><a href="./python_tools.md">이곳</a>을 클릭하여 example.com으로 이동하세요.</p>        
 
         <h2>이미지</h2>
         <img src="이미지_URL" alt="설명">
