index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>welcome</h1>
+        <h1>파이썬 개발툴 비교</h1>
         <p>이 페이지는 모든 기기에서 잘 보입니다.</p>
     </div>
     <div class="content">
@@ -79,14 +79,22 @@
 
         <table>
             <tr>
-                <th>헤더 1</th>
-                <th>헤더 2</th>
-                <th>헤더 3</th>
+
+                <th>구분</th>
+                <th>가격</th>
+                <th>지원 운영체제</th>
+<th>확장기능지원(플러그인)</th>
+<th>프로그램 로딩속도</th>
+<th>회사</th>
+
             </tr>
             <tr>
                 <td>데이터 1</td>
                 <td>데이터 2</td>
                 <td>데이터 3</td>
+<td>데이터 4</td>
+<td>데이터 5</td>
+<td>데이터 6</td>
             </tr>
             <!-- 추가 행을 여기에 넣으세요 -->
         </table>
