--- a/index.html
+++ b/index.html
@@ -79,26 +79,40 @@
 
         <table>
             <tr>
-
+                <th>툴명칭</th>
+                <th>개발사</th>
+                <th>지원OS</th>
+                <th>설치</th>
                 <th>구분</th>
-                <th>가격</th>
-                <th>지원 운영체제</th>
-<th>확장기능지원(플러그인)</th>
-<th>프로그램 로딩속도</th>
-<th>회사</th>
-
             </tr>
             <tr>
                 <td>데이터 1</td>
                 <td>데이터 2</td>
                 <td>데이터 3</td>
-<td>데이터 4</td>
-<td>데이터 5</td>
-<td>데이터 6</td>
+                <td>데이터 4</td>
+                <td>데이터 4</td>
             </tr>
-            <!-- 추가 행을 여기에 넣으세요 -->
         </table>
 
+        <table>
+            <tr>
+                <th>툴명칭</th>
+                <th>확장(Plug-in)</th>
+                <th>설치</th>
+                <th>로딩속도</th>
+                <th>특징</th>
+            </tr>
+            <tr>
+                <td>데이터 1</td>
+                <td>데이터 2</td>
+                <td>데이터 3</td>
+                <td>데이터 4</td>
+                <td>데이터 4</td>
+            </tr>
+        </table>        
+
+        
+        
         <h2>글목록</h2>
         <ul>
             <li>글 1</li>
